Use __atomic builtins if C11 atomics are not available

See https://gcc.gnu.org/bugzilla/show_bug.cgi?id=53769

Fixes #77

Signed-off-by: Felix Abecassis <fabecassis@nvidia.com>